_sass/components/_footer.scss
.footer {
  @include at-media("desktop") {
    min-height: 17rem;
  }

  .footer-nav {
    background-color: $blue-lightest;
    background-image: none;
    padding: 2em 0;

    @include at-media("desktop") {
      min-height: 17rem;
    }

    a {
      text-decoration: underline;
      display: block;
      margin: 0 0 1em 0;
      white-space: nowrap;
    }

    .navigation {
      display: block;
      justify-content: flex-end;
      padding-top: ($container-spacing-sm * 3);

      @include at-media("tablet") {
        display: flex;
        padding-top: 0;
      }
    }

    .navigation-footer-logo {
      background: url(../img/logo_sign_in.svg) top left no-repeat;
    }

    .grid {
      display: flex;
      justify-content: space-between;
      border-bottom: 1px solid $border-color;
      flex-wrap: wrap;
    }

    .grid section {
      margin-right: 1rem;

      @include at-media("tablet") {
        margin-right: 3rem;

        &:last-child {
          margin-right: 0;
        }
      }
    }

    .grid section h6 {
      margin: 0 0 1em 0;
      font-size: $base-font-sm;
      color: $blue-mid;
    }

    .grid section a {
      color: $blue-mid;
      font-size: $base-font-sm;
    }

    .system-status {
      display: flex;
      align-items: center;
      padding-top: $container-spacing-sm;

      &::before {
        content: "";
        width: 1.75rem;
        height: 1.75rem;
        display: inline-block;
        margin-right: 0.25rem;
        color: $blue;
        background: url(../img/system-status/icon-system-status.svg) left center
          no-repeat;
      }

      a {
        margin: 0;
        font-size: $base-font-sm;
        color: $blue-mid;
      }
    }
  }
}

